--- a/exchange_sims/Cargo.toml
+++ b/exchange_sims/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
-name = "exchange_sims"
+name = "boost"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 rand = {version = "*"}
 sha2 = {version =  "*"}
+
+[[bin]]
+name = "simulate"
+path = "bin/simulation.rs"
